# era-shivini

./: .gitignore  Cargo.toml  README.md
.github/workflows/: basic_build.yaml  ci.yaml
src/: constraint_evaluation.rs  context.rs  copy_permutation.rs  dvec.rs  fri.rs  gpu_proof_config.rs  lib.rs  lookup.rs  oracle.rs  poly.rs  pow.rs  prover.rs  quotient.rs  synthesis_utils.rs  test.rs  utils.rs  virtual_allocator.rs
src/cs/: mod.rs  setup.rs  witness.rs
src/data_structures/: arguments.rs  cache.rs  mod.rs  setup.rs  storage.rs  trace.rs  tree.rs
src/primitives/: arith.rs  cs_helpers.rs  dry_run.rs  helpers.rs  mem.rs  mod.rs  ntt.rs  tree.rs
src/static_allocator/: device.rs  host.rs  mod.rs
test_data/: default.circuit
test_data/base/: 1.circuit  1.cpu.proof  10.circuit  10.cpu.proof  11.circuit  11.cpu.proof  12.circuit  12.cpu.proof  13.circuit  13.cpu.proof  14.circuit  14.cpu.proof  15.circuit  15.cpu.proof  2.cpu.proof  255.circuit  255.cpu.proof  3.circuit  3.cpu.proof  4.cpu.proof  5.circuit  5.cpu.proof  6.circuit  6.cpu.proof  7.circuit  7.cpu.proof  8.cpu.proof  9.cpu.proof
test_data/eip4844/: 0.circuit  0.cpu.proof
test_data/leaf/: 10.cpu.proof  11.circuit  11.cpu.proof  12.cpu.proof  13.circuit  13.cpu.proof  14.circuit  14.cpu.proof  15.circuit  15.cpu.proof  16.circuit  16.cpu.proof  17.circuit  17.cpu.proof  18.circuit  18.cpu.proof  3.cpu.proof  4.circuit  4.cpu.proof  5.cpu.proof  6.circuit  6.cpu.proof  7.cpu.proof  8.circuit  8.cpu.proof  9.cpu.proof
test_data/node/: 14.circuit  2.cpu.proof
test_data/tip/: 255.cpu.proof
