[package]
name = "shivini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boojum = { git = "https://github.com/matter-labs/era-boojum", branch = "main" }
boojum-cuda = { git = "https://github.com/matter-labs/era-boojum-cuda", branch = "main" }
cudart = { git = "https://github.com/matter-labs/era-cuda", branch = "main", package = "cudart" }
cudart-sys = { git = "https://github.com/matter-labs/era-cuda", branch = "main", package = "cudart-sys" }
circuit_definitions = { git = "https://github.com/matter-labs/era-zkevm_test_harness", branch = "v1.5.0", package = "circuit_definitions", optional = true }

rand = "0.8"
smallvec = { version = "1.13", features = [
    "const_generics",
    "const_new",
    "serde",
] }
sha2 = "0.10"
blake2 = "0.10"
hex = "0.4"
derivative = "2.2"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
serial_test = "3.0"

[features]
default = ["zksync"]
zksync = ["circuit_definitions"]
allocator_stats = []

[profile.release]
incremental = true
