[package]
name = "shivini"
version = "0.150.2-rc.1"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-shivini"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "ZKsync library for GPU proving"
exclude = ["/test_data"]

[dependencies]
boojum = "=0.2.0"
boojum-cuda = "=0.1.0"
cudart = { version = "=0.1.0", package = "era_cudart" }
cudart-sys = { version = "=0.1.0", package = "era_cudart_sys" }
circuit_definitions = { version = "=0.150.2-rc.1", package = "circuit_definitions", optional = true }

rand = "0.8"
smallvec = { version = "1.13", features = [
    "const_generics",
    "const_new",
    "serde",
] }
sha2 = "0.10"
blake2 = "0.10"
hex = "0.4"
derivative = "2.2"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
serial_test = "3.1"

[features]
default = ["zksync"]
zksync = ["circuit_definitions"]
allocator_stats = []

[profile.release]
incremental = true
