[package]
name = "shivini"
version = "0.150.2-rc3"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-shivini"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "Shvini is a library implementing a GPU-accelerated zkSync prover"
exclude = ["/test_data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boojum = "=0.2.2"
boojum-cuda = "=0.2.0"
era_cudart = "=0.2.0"
era_cudart_sys = "=0.2.0"
circuit_definitions = { version = "=0.150.2-rc.3", package = "circuit_definitions", optional = true }

rand = "0.8"
smallvec = { version = "1.13", features = [
    "const_generics",
    "const_new",
    "serde",
] }
sha2 = "0.10"
blake2 = "0.10"
hex = "0.4"
derivative = "2.2"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
nvtx = { version = "1.3", optional = true }

[dev-dependencies]
serial_test = "3.1"

[features]
default = ["zksync"]
zksync = ["circuit_definitions"]
allocator_stats = []
nvtx = ["dep:nvtx"]

[profile.release]
incremental = true
